# matrix-bridge-discord

./: .dockerignore  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  README_CN.md
.github/workflows/: crates-release.yml  docker.yml  release.yml  tests.yml
config/: config.example.kdl  config.sample.yaml
docker/: Dockerfile
migrations/: 001_initial.sql
src/: admin.rs  bridge.rs  cache.rs  cli.rs  config.rs  db.rs  discord.rs  emoji.rs  main.rs  matrix.rs  media.rs  parsers.rs  utils.rs  web.rs
src/bridge/: blocker.rs  logic.rs  message_flow.rs  mod.rs  presence_handler.rs  provisioning.rs  queue.rs  user_sync.rs
src/config/: mod.rs  parser.rs
src/database/: manager.rs  mod.rs  postgres.rs  sqlite.rs
src/database/stores/: mod.rs
src/db/: manager.rs  mod.rs  models.rs  mysql.rs  postgres.rs  schema.rs  schema_mysql.rs  schema_sqlite.rs  sqlite.rs
src/db/stores/: mod.rs
src/discord/: command_handler.rs  embed.rs  mod.rs
src/matrix/: command_handler.rs  event_handler.rs  mod.rs
src/parsers/: command_parser.rs  common.rs  discord_parser.rs  matrix_parser.rs  mod.rs
src/utils/: alert.rs  error.rs  formatting.rs
src/web/: metrics.rs  mod.rs  provisioning.rs  thirdparty.rs
src/web/handlers/: health.rs  metrics.rs  mod.rs  provisioning.rs
src/web/middleware/: auth.rs
