[package]
name = "matrix-bridge-discord"
version = "0.1.0"
edition = "2024"
authors = ["Palpo Team <chris@acroidea.com>"]
description = "A bridge between Matrix and Discord written in Rust"
license = "Apache-2.0"
repository = "https://github.com/palpo-im/matrix-bridge-discord"
keywords = ["matrix", "discord", "bridge", "chat"]
categories = ["network-programming", "web-programming"]

[[bin]]
name = "matrix-bridge-discord"
path = "src/main.rs"

[features]
default = ["postgres", "sqlite", "discord"]
postgres = []
sqlite = []
discord = ["serenity"]

[dependencies]
salvo = { version = "0.89", features = ["full", "oapi", "quinn"] }
tokio = { version = "1.40", features = ["full"] }
hyper = { version = "1.8.1", features = ["full"] }
serenity = { version = "0.12", default-features = false, features = [
    "client",
    "gateway",
    "rustls_backend",
    "model",
    "utils",
    "cache",
], optional = true }
songbird = { version = "0.4.6", optional = true }
diesel = { version = "2.3.6", default-features = false, features = [
    "postgres",
    "sqlite",
    "r2d2",
    "chrono",
] }
libsqlite3-sys = { version = "0.35.0", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
config = "0.14"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-futures = "0.2"
anyhow = "1.0"
thiserror = "1.0"
futures = "0.3"
async-trait = "0.1"
reqwest = { version = "0.13", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
time = "0.3"
uuid = { version = "1.11", features = ["v4", "serde"] }
url = "2.5"
once_cell = "1.20"
parking_lot = "0.12"
metrics = { version = "0.23", optional = true }
metrics-exporter-prometheus = { version = "0.15", optional = true }
matrix-bot-sdk = { version = "0.2.2", features = ["appservice"] }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.25.0"
test-case = "3.3"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
debug = true
opt-level = 0
